<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
    <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="0.01"
            android:id="@+id/bar"
            android:gravity="start|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
    >
        <ImageView
                android:layout_width="34dp"
                android:contentDescription="@string/app_icon"
                android:layout_height="34dp" app:srcCompat="@drawable/images" android:id="@+id/imageView"
                android:layout_marginVertical="12dp" android:layout_marginStart="20dp"/>
        <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/app_title" android:textSize="27sp"
                android:textColor="#D9D9D9" android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:layout_marginStart="10dp"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.25"
            android:background="@color/white"
            android:paddingHorizontal="12dp"
    >
        <TextView
                android:text="@string/convert_currency"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_height="60dp"
                    android:id="@+id/edit_layout_1"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/currency_1"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:hint="@string/sel_prompt_1"
                        android:labelFor="@id/edit_layout_1"
                        android:inputType="none"
                        tools:ignore="SpeakableTextPresentCheck"/>

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                <TextView
                        android:text="@string/unit_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" android:id="@+id/unit_1" android:layout_weight="0.7"/>
                <TextView
                        android:text="@string/sym"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="22sp" android:id="@+id/sym_1" android:layout_weight="0.75"/>
                <EditText
                        android:hint="@string/amount_1"
                        android:autofillHints="number"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/amt_1"
                        android:layout_weight="0.15"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_height="60dp"
                    android:id="@+id/edit_layout_2"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/currency_2"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:hint="@string/sel_prompt_2"
                        android:labelFor="@id/edit_layout_2"
                        android:inputType="none"
                        tools:ignore="SpeakableTextPresentCheck"/>

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                <TextView
                        android:text="@string/unit_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" android:id="@+id/unit_2" android:layout_weight="0.7"/>
                <TextView
                        android:text="@string/sym"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="22sp" android:id="@+id/sym_2" android:layout_weight="0.75"/>
                <EditText
                        android:autofillHints="number"
                        android:hint="@string/amount_2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/amt_2"
                        android:layout_weight="0.15"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>